--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>lesson9</title>
     <link rel="stylesheet" href="reset.css">
+
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -62,8 +66,14 @@
     <main class="main">
         <div class="blackslider">
             <div class="container">
-                <div class="col-12">
-                    <div class="slider">SLIDER</div> 
+                <div class="row">
+                    <div class="col-12">
+                        <div class="slider">
+                            <div>Slider 1</div>
+                            <div>Slider 2</div>
+                            <div>Slider 3</div>
+                        </div> 
+                    </div>
                 </div>
             </div>
         </div>
@@ -120,7 +130,7 @@
                 <div class="col-12">
                         <ul class="breadcrumbs">
                           <li><a href=""> Home page</a></li>
-                          <li><a href="">Prodacts</a></li> 
+                          <li><a href="">Products</a></li> 
                           <li><a href="">Laptops and Tablets</a> </li>  
                         </ul>
                 </div>
@@ -156,7 +166,7 @@
                                 <div class="product-images">
                                     <img src="images/computer.png" alt="">
                                     <div class="zoom"></div>
-                                    <div class="like"></div>
+                                    <div class="like liked"></div>
                                 </div>
                                 <div class="product-body">
                                     <div class="product-title">#1 Device Name</div>
@@ -171,9 +181,17 @@
                                     <div class="product-price">
                                         <span> &#36 599<sup> 25</sup></span>
                                     </div>
+
+                                    <div class="product-quantity">
+                                        <button class="decrement-button">-</button>
+                                        <input type="text" value="1" readonly>
+                                        <button class="increment-button">+</button>
+                                    </div>
+                                    
                                     <button class="btn btn-more-details"> MORE DETAILS</button>
                                     <button class="btn btn-add-to-cart"> ADD TO CART</button>
                                 </div>
+
                              </div>    
                     </div>
                     
@@ -197,6 +215,13 @@
                                 <div class="product-price">
                                     <span> &#36 1250<sup> 99</sup></span>
                                 </div>
+
+                                <div class="product-quantity">
+                                    <button class="decrement-button">-</button>
+                                    <input type="text" value="1" readonly>
+                                    <button class="increment-button">+</button>
+                                </div>
+
                                 <button class="btn btn-more-details"> MORE DETAILS</button>
                                 <button class="btn btn-add-to-cart"> ADD TO CART</button>
                             </div>
@@ -224,6 +249,13 @@
                                     <div class="product-price">
                                         <span> &#36 399<sup> 50</sup></span>
                                     </div>
+
+                                    <div class="product-quantity">
+                                        <button class="decrement-button">-</button>
+                                        <input type="text" value="1" readonly>
+                                        <button class="increment-button">+</button>
+                                    </div>
+
                                     <button class="btn btn-more-details"> MORE DETAILS</button>
                                     <button class="btn btn-add-to-cart"> ADD TO CART</button>
                                 </div>
@@ -250,6 +282,13 @@
                                     <div class="product-price">
                                         <span> &#36 599<sup> 25</sup></span>
                                     </div>
+
+                                    <div class="product-quantity">
+                                        <button class="decrement-button">-</button>
+                                        <input type="text" value="1" readonly>
+                                        <button class="increment-button">+</button>
+                                    </div>
+
                                     <button class="btn btn-more-details"> MORE DETAILS</button>
                                     <button class="btn btn-add-to-cart"> ADD TO CART</button>
                                 </div>
@@ -276,6 +315,13 @@
                                     <div class="product-price">
                                         <span> &#36 1250<sup> 99</sup></span>
                                     </div>
+
+                                    <div class="product-quantity">
+                                        <button class="decrement-button">-</button>
+                                        <input type="text" value="1" readonly>
+                                        <button class="increment-button">+</button>
+                                    </div>
+
                                     <button class="btn btn-more-details"> MORE DETAILS</button>
                                     <button class="btn btn-add-to-cart"> ADD TO CART</button>
                                 </div>
@@ -302,6 +348,13 @@
                                     <div class="product-price">
                                         <span> &#36 399<sup> 50</sup></span>
                                     </div>
+
+                                    <div class="product-quantity">
+                                        <button class="decrement-button">-</button>
+                                        <input type="text" value="1" readonly>
+                                        <button class="increment-button">+</button>
+                                    </div>
+
                                     <button class="btn btn-more-details"> MORE DETAILS</button>
                                     <button class="btn btn-add-to-cart"> ADD TO CART</button>
                                 </div>
@@ -328,6 +381,13 @@
                                     <div class="product-price">
                                         <span> &#36 599<sup> 25</sup></span>
                                     </div>
+
+                                    <div class="product-quantity">
+                                        <button class="decrement-button">-</button>
+                                        <input type="text" value="1" readonly>
+                                        <button class="increment-button">+</button>
+                                    </div>
+
                                     <button class="btn btn-more-details"> MORE DETAILS</button>
                                     <button class="btn btn-add-to-cart"> ADD TO CART</button>
                                 </div>
@@ -355,6 +415,13 @@
                                     <div class="product-price">
                                         <span> &#36 1250<sup> 99</sup></span>
                                     </div>
+
+                                    <div class="product-quantity">
+                                        <button class="decrement-button">-</button>
+                                        <input type="text" value="1" readonly>
+                                        <button class="increment-button">+</button>
+                                    </div>
+
                                     <button class="btn btn-more-details"> MORE DETAILS</button>
                                     <button class="btn btn-add-to-cart"> ADD TO CART</button>
                                 </div>
@@ -381,6 +448,13 @@
                                     <div class="product-price">
                                         <span> &#36 399<sup> 50</sup></span>
                                     </div>
+
+                                    <div class="product-quantity">
+                                        <button class="decrement-button">-</button>
+                                        <input type="text" value="1" readonly>
+                                        <button class="increment-button">+</button>
+                                    </div>
+
                                         <button class="btn btn-more-details"> MORE DETAILS</button>
                                         <button class="btn btn-add-to-cart"> ADD TO CART</button>
 
@@ -436,6 +510,11 @@
             </form>
         </div>
     </div>
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+
     <script src="app.js"></script>
 </body>
 </html>
